--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Title: RGEOESTAD: Un programa de código abierto para aplicaciones geoestadísti
 Version: 0.1.0
 Author@R: c(person("M. A.", "Díaz-Viera", role = "aut", email = "mdiazv64@gmail.com"),
              person("V.", "Hernández-Maldonado", role = "aut"),
-             person("V.", "Méndez-Venegas"),
-             person("J.", "Mendoza-Torres"),
-             person("Le", "V.H.", email = "levanhuong15011989@gmail.com")
+             person("J.", "Méndez-Venegas"),
+             person("F.", "Mendoza-Torres"),
+             person("V.H.", "Le", email = "levanhuong15011989@gmail.com")
              person("D.", "Vázquez-Ramírez", email = "daniel.geofisico89@comunidad.unam.mx"))
 Depends: Rcpp, maps, mapproj, actuar, fields, fitdistrplus, geoR, gstat, MASS, moments, poweRlaw,RFOC, spatstat, ADGofTest, reshape, sp
 Maintainer: D. Vázquez Ramírez <daniel.geofisico89@comunidad.unam.mx>
