--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
-Package: RGEOSTAD
-Type: Package
+Package: RGeoestad2D
 Title: RGEOESTAD: Un programa de código abierto para aplicaciones geoestadísticas basado en R-Project.
-Version: 0.1.0
-Author@R: c(person("M. A.", "Díaz-Viera", role = "aut", email = "mdiazv64@gmail.com"),
-             person("V.", "Hernández-Maldonado", role = "aut"),
-             person("J.", "Méndez-Venegas"),
-             person("F.", "Mendoza-Torres"),
-             person("V.H.", "Le", email = "levanhuong15011989@gmail.com")
-             person("D.", "Vázquez-Ramírez", email = "daniel.geofisico89@comunidad.unam.mx"))
-Depends: Rcpp, maps, mapproj, actuar, fields, fitdistrplus, geoR, gstat, MASS, moments, poweRlaw,RFOC, spatstat, ADGofTest, reshape, sp
-Maintainer: D. Vázquez Ramírez <daniel.geofisico89@comunidad.unam.mx>
-Description: 
+Version: 0.2.0
+Authors@R: c(person(given ="M. A.", family ="Díaz-Viera", role = "aut", email = "mdiazv64@gmail.com"),
+             person(given ="V.", family ="Hernández-Maldonado", role = "aut"),
+             person(given ="V.", family ="Méndez-Venegas"),
+             person(given ="J.", family ="Mendoza-Torres"),
+             person(given = "V.H.",family ="Le", email = "levanhuong15011989@gmail.com"),
+             person(given ="D.", family ="Vázquez-Ramírez",role = "cre", email = "daniel.geofisico89@comunidad.unam.mx"))
+Depends: Rcpp, maps, mapproj, actuar, fields, fitdistrplus, gstat, MASS, moments, poweRlaw,RFOC, spatstat, ADGofTest, reshape, sp
+Maintainer: D. Vázquez-Ramírez <daniel.geofisico89@comunidad.unam.mx>
+Description: What the package does (one paragraph).
 License: GPL (>= 2)
 Encoding: UTF-8
-LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
